--- a/Assets/com.fluid.unique-id/Editor/com.fluid.unique-id.Editor.asmdef
+++ b/Assets/com.fluid.unique-id/Editor/com.fluid.unique-id.Editor.asmdef
@@ -1,12 +1,19 @@
 {
     "name": "com.fluid.unique-id.Editor",
     "references": [
-        "com.fluid.unique-id"
+        "com.fluid.unique-id",
+        "Unity.Addressables",
+        "Unity.Addressables.Editor"
     ],
-    "optionalUnityReferences": [],
     "includePlatforms": [
         "Editor"
     ],
     "excludePlatforms": [],
-    "allowUnsafeCode": false
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
